--- a/looplab/public/css/main.css
+++ b/looplab/public/css/main.css
@@ -1,2 +1,2 @@
-*{margin:0;padding:0;box-sizing:border-box}body{background-color:#333;color:#fff}.navbar{border-bottom:3px solid #008ed6;opacity:.8}
+*{margin:0;padding:0;box-sizing:border-box}body{background-color:#333;color:#fff}.navbar{border-bottom:3px solid #008ed6;opacity:.8}#home-section{background-image:url(../img/children-community-family-9746.jpg);background-size:cover;background-repeat:no-repeat;background-attachment:fixed;min-height:700px;position:relative}#home-section .home-inner{padding-top:150px}#home-section .dark-overlay{background-color:rgba(0,0,0,.7);position:absolute;width:100%;height:100%}#home-section .card-form{opacity:.8}#home-section .fa{color:#008ed6;background-color:#fff;padding:4px;border-radius:5px;font-size:20px}
 /*# sourceMappingURL=main.css.map */
