--- a/looplab/frontend/pages/index.pug
+++ b/looplab/frontend/pages/index.pug
@@ -9,11 +9,20 @@ html(lang="en")
     link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous")
     title LoopLab
   body
-    /////// NAVIGATION ////////
+    /////// NAVIGATION ///////
     include ./layout/navigation
 
-    /////// HOME SECTION //////
+    /////// HOME SECTION /////
     include ./sections/home
+
+    ///// EXPLORE SECTION ////
+    include ./sections/explore
+
+    ///// CREATE SECTION /////
+    include ./sections/create
+
+    ///// SHARE SECTION //////
+    include ./sections/share
 
     /////////////////////////////////
     script(src="./js/jquery.min.js")
