--- a/looplab/frontend/pages/layout/navigation.pug
+++ b/looplab/frontend/pages/layout/navigation.pug
@@ -6,7 +6,7 @@ nav.navbar.navbar-expand-sm.bg-dark.navbar-dark.fixed-top
     .collapse.navbar-collapse#navbarCollapse
       ul.navbar-nav.ml-auto
         li.nav-item
-          a.nav-link(href="#home") Home
+          a.nav-link(href="#home-section") Home
         li.nav-item
           a.nav-link(href="#explore-head-section") Explore
         li.nav-item
