--- a/looplab/frontend/styles/_variables.scss
+++ b/looplab/frontend/styles/_variables.scss
@@ -2,4 +2,4 @@ $bg-color: #333;
 $font-color: #fff;
 $primary-color: #008ed6;
 $dark-overlay: rgba(0, 0, 0, 0.7);
-$font-size: 20px;
+$icon-size: 20px;
