create modal & footer

--- a/looplab/frontend/pages/index.pug
+++ b/looplab/frontend/pages/index.pug
@@ -24,7 +24,12 @@ html(lang="en")
     ///// SHARE SECTION //////
     include ./sections/share
 
-    /////////////////////////////////
+    ///////// FOOTER /////////
+    include ./layout/footer
+
+    ////// CONTACT MODAL /////
+    include ./layout/contact-modal
+
     script(src="./js/jquery.min.js")
     script(src="./js/popper.min.js")
     script(src="./js/bootstrap.min.js")
