--- a/mizuxe/frontend/pages/index.pug
+++ b/mizuxe/frontend/pages/index.pug
@@ -6,13 +6,13 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     link(rel="stylesheet" href="css/bootstrap.min.css")
     link(rel="stylesheet" href="css/main.css")
-    link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous")
+    link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous")
     title Mizuxe
   body
-    /////// NAVIGATION ///////
+    /////// NAVIGATION /////////
     include ./layout/navigation
 
-    /////// SHOWCASE /////////
+    /////// SHOWCASE ///////////
     include ./sections/showcase
     
     /////// NEWSLETTER /////////
@@ -23,6 +23,16 @@ html(lang="en")
 
     ////////// ABOUT ///////////
     include ./sections/about
+
+    //////// AUTHORS ///////////
+    include ./sections/authors
+
+    ///////// CONTACT //////////
+    include ./sections/contact
+
+    //////// FOOTER ////////////
+    include ./sections/footer
+    
 
     script(src="./js/jquery.min.js")
     script(src="./js/popper.min.js")
