--- a/mizuxe/frontend/pages/layout/navigation.pug
+++ b/mizuxe/frontend/pages/layout/navigation.pug
@@ -8,9 +8,9 @@ nav.navbar.navbar-expand-md.navbar-light.fixed-top.py-4
     .collapse.navbar-collapse#navbarNav
       ul.navbar-nav.ml-auto
         li.nav-item
-          a.nav-link(href="home") Home
+          a.nav-link(href="/") Home
         li.nav-item
-          a.nav-link(href="about") About
+          a.nav-link(href="showcase") About
         li.nav-item
           a.nav-link(href="authors") Authors
         li.nav-item
