--- a/blogen/frontend/pages/index.pug
+++ b/blogen/frontend/pages/index.pug
@@ -15,8 +15,21 @@ html(lang="en")
     // HEADER
     include ./layout/header
 
+    // ACTIONS
+    include ./sections/actions
 
-  script(src="./js/jquery.min.js")
-  script(src="./js/popper.min.js")
-  script(src="./js/bootstrap.min.js")
-  script(src="./js/main.js")
+    // POSTS
+    include ./sections/posts
+
+    // FOOTER
+    include ./layout/footer
+
+
+    script(src="./js/jquery.min.js")
+    script(src="./js/popper.min.js")
+    script(src="./js/bootstrap.min.js")
+    script(src="./js/main.js")
+    script(src="https://cdn.ckeditor.com/4.11.1/standard/ckeditor.js")
+    script.
+      CKEDITOR.replace("editor1");
+      CKEDITOR.replace("editor2");
